# backtradercpp

./: .gitignore  CMakeLists.txt  ReadMe.md  check_python.cmake
include/backtradercpp/: Broker.hpp  Cerebro.hpp  Common.hpp  DataFeeds.hpp  Strategy.hpp
test/: backtrader_test.py
vs_examples/basic_1/: basic_1.cpp
